--- a/obraz.html
+++ b/obraz.html
@@ -8,7 +8,7 @@ window.close()
 </script>
 </head>
 <body>
-<textarea name="nazwa" cols="100" rows="100" readonly></textarea>
+<textarea name="teoria" cols="100" rows="100" readonly>
 
 Teoria:
 a)Uwagi na temat JS
