--- a/obraz.html
+++ b/obraz.html
@@ -8,7 +8,7 @@ window.close()
 </script>
 </head>
 <body>
-<textarea name="teoria" cols="100" rows="100" readonly>
+<textarea  cols="100" rows="100">
 
 Teoria:
 a)Uwagi na temat JS
