--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Przykład nr tutaj wpisz odpowiedni nume </title>
+<title>Malek </title>
 <script language="JavaScript">
 function WinOpen(WinOpen_Malek)
 {
@@ -9,8 +9,9 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 </script>
 </head>
 <body>
+  <center>Malek</center>
 <form>
-<input type="button" name="przycisk" value="Nowa Strona" onclick="WinOpen(' WinOpen_Malek')">
+<input type="button" name="przycisk" value="zadanie" onclick="WinOpen(' WinOpen_Malek')">
 </form>
 </body>
 </html>
