--- a/obraz.html
+++ b/obraz.html
@@ -8,7 +8,8 @@ window.close()
 </script>
 </head>
 <body>
-<textarea  cols="100" rows="100">
+ <label for="w3review"></label>
+<textarea id="w3review" name="w3review" rows="4" cols="50">
 
 Teoria:
 a)Uwagi na temat JS
