--- a/index.html
+++ b/index.html
@@ -9,9 +9,12 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 </script>
 </head>
 <body>
-  <center>Malek</center>
+  <font size="45">
+  <center><B>Malek</b>
+    </font>
 <form>
-<input type="button" name="przycisk" value="zadanie" onclick="WinOpen(' WinOpen_Malek')">
+<input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
+  </center>
 </form>
 </body>
 </html>
