--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 </script>
 </head>
 <body>
+  document.body.style.backgroundColor = "	#000080";
   <font size="75">
   <center><B>Malek</b>
     </font>
