--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 }
 </script>
 </head>
+  bgcolor = "navy" width = "100%">
 <body>
-  document.body.style.backgroundColor = "	#000080";
+
   <font size="75">
   <center><B>Malek</b>
     </font>
