--- a/index_Malek.html
+++ b/index_Malek.html
@@ -5,7 +5,7 @@
 function WinOpen(WinOpen_Malek)
 {
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
-  window.open("kod nr1.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("kodzad1.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
 }
 </script>
 </head>
@@ -17,7 +17,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
     </font>
 <form>
 <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
-  <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek_Kod')">
+  <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')">
   </center>
 </form>
 </body>
