--- a/index_Malek.html
+++ b/index_Malek.html
@@ -17,7 +17,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
     </font>
 <form>
 <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
-  <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')">
+  <P><input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> </p>
   </center>
 </form>
 </body>
