--- a/kodzad1.html
+++ b/kodzad1.html
@@ -1,4 +1,14 @@
-<label for="w1review"></label>
+<html>
+<head>
+<script type="text/javascript">
+function okno_zamknij(okno_zamknij_Malek)
+{
+window.close()
+}
+</script>
+</head>
+<body>
+ <label for="w1review"></label>
 <textarea id="w1review" name="w3review" rows="150" cols="150">
 <html>
 <head>
@@ -33,6 +43,6 @@ wytłumaczenie:.
 <img src="obraz1.gif" />
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
-<textarea>
-  <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
+</textarea>
+  <input type="button" value="zamknij okno" onclick="okno_zamknij(okno_zamknij_Malek)"/>
 </html>
