--- a/kodzad1.html
+++ b/kodzad1.html
@@ -21,7 +21,7 @@ window.close()
 </head>
 <body>
  <label for="w3review"></label>
-<textarea id="w3review" name="w3review" rows="150" cols="150">
+<textarea id="w3review" name="w3review" rows="60" cols="80">
 
 Teoria:
 a)Uwagi na temat JS
@@ -39,7 +39,7 @@ b)Przepisz linie kody pod nimi wytłumaczenie:
 wytłumaczenie: .
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 wytłumaczenie:.
-</textarea>
+<!– </textarea> –>  
 <img src="obraz1.gif" />
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
