--- a/kodzad1.html
+++ b/kodzad1.html
@@ -39,10 +39,10 @@ b)Przepisz linie kody pod nimi wytłumaczenie:
 wytłumaczenie: .
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 wytłumaczenie:.
-<!– </textarea> –>  
+</textarea>  
 <img src="obraz1.gif" />
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
-</textarea>
-  <input type="button" value="zamknij okno" onclick="okno_zamknij(okno_zamknij_Malek)"/>
+<!– </textarea> –>
+<input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </html>
