--- a/kodzad1.html
+++ b/kodzad1.html
@@ -41,8 +41,8 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 wytłumaczenie:.
 </textarea>  
 <img src="obraz1.gif" />
-//<input type="button" value="zamknij okno" onclick="okno_zamknij()"/>//
+<input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
-<</textarea> 
+</textarea> 
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </html>
