--- a/index_Malek.html
+++ b/index_Malek.html
@@ -4,8 +4,8 @@
 <script language="JavaScript">
 function WinOpen(WinOpen_Malek)
 {
-window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
-  window.open("kodzad1.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("kodzad1_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
 }
 </script>
 </head>
