--- a/kodzad1_Malek.html
+++ b/kodzad1_Malek.html
@@ -41,7 +41,7 @@ wytłumaczenie: .
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 wytłumaczenie:.
  
-<img src="obraz1.gif" />
+<img src="obraz1.gif" alt="Mountain View" style="width:304px;height:228px;">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
 </textarea> 
