--- a/obraz_Malek.html
+++ b/obraz_Malek.html
@@ -8,6 +8,7 @@ window.close()
 </script>
 </head>
 <body>
+ <img src="obraz1.gif" alt="obraz" />
  <label for="w3review"></label>
 <textarea id="w3review" name="w3review" rows="40" cols="60">
 
@@ -28,7 +29,7 @@ wytłumaczenie: .
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 wytłumaczenie:.
 </textarea>
-<img src="obraz1.gif" alt="Mountain View" style="width:304px; height:228px;">
+
 
 </body>
 </html>
