--- a/obraz_Malek.html
+++ b/obraz_Malek.html
@@ -8,7 +8,7 @@ window.close()
 </script>
 </head>
 <body>
- <img src="obraz1.gif" alt="obraz" />
+ 
  <label for="w3review"></label>
 <textarea id="w3review" name="w3review" rows="40" cols="60">
 
@@ -30,7 +30,7 @@ window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=
 wytłumaczenie:.
 </textarea>
 
-
+<img src="obraz1.gif">
 </body>
 </html>
 
