--- a/kodzad1_Malek.html
+++ b/kodzad1_Malek.html
@@ -41,7 +41,7 @@ wytłumaczenie: .
 window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");
 wytłumaczenie:.
  
-<img src="obraz1.gif" alt="Mountain View" style="width:304px;height:228px;">
+<img src="https://www.bing.com/images/search?view=detailV2&ccid=pMIlHDOL&id=5F3360E026997B6FCDCC2545E0F29F0CF70B5BCF&thid=OIP.pMIlHDOLtvvGfhGFB-SBAAHaDe&mediaurl=https%3a%2f%2fimg.joemonster.org%2fi%2f2014%2f03%2fprezwierzaki_11.gif&cdnurl=https%3a%2f%2fth.bing.com%2fth%2fid%2fR.a4c2251c338bb6fbc67e118507e48100%3frik%3dz1sL9wyf8uBFJQ%26pid%3dImgRaw%26r%3d0&exph=293&expw=625&q=gif+z+ma%c5%82ym+%c5%bc%c3%b3%c5%82wiem&simid=608019747273967555&FORM=IRPRST&ck=D6EB95F00CE2C9349CA501F73A1C89D7&selectedIndex=34" alt="funny GIF" width="100%">
 <input type="button" value="zamknij okno" onclick="okno_zamknij()"/>
 </body>
 </textarea> 
