--- a/index_Malek.html
+++ b/index_Malek.html
@@ -6,6 +6,7 @@ function WinOpen(WinOpen_Malek)
 {
 window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
   window.open("kodzad1_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("zadanie3_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
 }
 </script>
 </head>
@@ -18,6 +19,7 @@ window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,h
 <form>
 <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
   <P><input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <P><input type="button" name="przycisk" value="zadanie 3" onclick="WinOpen(' WinOpen_Malek')"> </p>
   </center>
 </form>
 </body>
