--- a/index_Malek.html
+++ b/index_Malek.html
@@ -7,6 +7,10 @@ function WinOpen(WinOpen_Malek)
 window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
   window.open("kodzad1_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
   window.open("zadanie3_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("zadanie4_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("zadanie5_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("zadanie6_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
+  window.open("zadanie7_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
 }
 </script>
 </head>
@@ -20,6 +24,11 @@ window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,h
 <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
   <P><input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> </p>
   <P><input type="button" name="przycisk" value="zadanie 3" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <P><input type="button" name="przycisk" value="zadanie 4" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <P><input type="button" name="przycisk" value="zadanie 5" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <P><input type="button" name="przycisk" value="zadanie 6" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <P><input type="button" name="przycisk" value="zadanie 7" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  
   </center>
 </form>
 </body>
