--- a/zadanie3_Malek.html
+++ b/zadanie3_Malek.html
@@ -1,3 +1,9 @@
+<script type="text/javascript">
+function okno_zamknij(okno_zamknij_Malek)
+{
+window.close()
+}
+</script>
 <label for="w3review"></label>
 
 <textarea id="w3review" name="w3review" rows="50" cols="75">
