--- a/zadanie6_Malek.html
+++ b/zadanie6_Malek.html
@@ -1,5 +1,11 @@
 <html>
 <head>
+  <script type="text/javascript">
+function okno_zamknij(okno_zamknij_Malek)
+{
+window.close()
+}
+</script>
 <script type="text/javascript">
 function show_prompt()
 {
