--- a/zadanie6_Malek.html
+++ b/zadanie6_Malek.html
@@ -15,5 +15,11 @@ if (name!=null && name!="")
 document.write("Witaj " + name + "! jak się masz?");
 }
 }
+  </script>
+</head>
+<body>
+<input type="button" onclick="show_prompt()" value="Pokaż prompt box" />
+</body>
+</html>
   </head>
   <html>
