--- a/index_Malek.html
+++ b/index_Malek.html
@@ -23,11 +23,11 @@ window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,h
 <form>
 <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
   <P><input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> </p>
-  <P><input type="button" name="przycisk" value="zadanie 3" onclick="WinOpen(' WinOpen_Malek')"> </p>
-  <P><input type="button" name="przycisk" value="zadanie 4" onclick="WinOpen(' WinOpen_Malek')"> </p>
-  <P><input type="button" name="przycisk" value="zadanie 5" onclick="WinOpen(' WinOpen_Malek')"> </p>
-  <P><input type="button" name="przycisk" value="zadanie 6" onclick="WinOpen(' WinOpen_Malek')"> </p>
-  <P><input type="button" name="przycisk" value="zadanie 7" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <input type="button" name="przycisk" value="zadanie 3" onclick="WinOpen(' WinOpen_Malek')"> 
+  <input type="button" name="przycisk" value="zadanie 4" onclick="WinOpen(' WinOpen_Malek')"> 
+  <input type="button" name="przycisk" value="zadanie 5" onclick="WinOpen(' WinOpen_Malek')"> 
+  <input type="button" name="przycisk" value="zadanie 6" onclick="WinOpen(' WinOpen_Malek')"> 
+  <input type="button" name="przycisk" value="zadanie 7" onclick="WinOpen(' WinOpen_Malek')"> 
   
   </center>
 </form>
