--- a/index_Malek.html
+++ b/index_Malek.html
@@ -21,8 +21,8 @@ window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,h
   <center><B>Malek</b>
     </font>
 <form>
-<input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
-  <P><input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> </p>
+  <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
+  <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> 
   <input type="button" name="przycisk" value="zadanie 3" onclick="WinOpen(' WinOpen_Malek')"> 
   <input type="button" name="przycisk" value="zadanie 4" onclick="WinOpen(' WinOpen_Malek')"> 
   <input type="button" name="przycisk" value="zadanie 5" onclick="WinOpen(' WinOpen_Malek')"> 
