--- a/index_Malek.html
+++ b/index_Malek.html
@@ -19,6 +19,8 @@ window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,h
 <form>
   <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
   <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> 
+  <input type="button" name="przycisk" value="zadanie 2" onclick="WinOpen(' WinOpen_Malek')">
+  <input type="button" name="przycisk" value="kod do zadania 2" onclick="WinOpen(' WinOpen_Malek')">
  
   
   </center>
