--- a/index_Malek.html
+++ b/index_Malek.html
@@ -1,29 +1,48 @@
+
 <html>
 <head>
-<title>Malek </title>
+<title> Index_Malek</title>
+ 
+  <style>
+  body {text-align:center;}
+  </style>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<META http-equiv="Content-Type" content="text/html;">
+  
 <script language="JavaScript">
-function WinOpen(WinOpen_Malek)
+function WinOpen_zad1()
 {
-window.open("obraz_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
-  window.open("kodzad1_Malek.html","okienko","toolbar=no,directories=no,menubar=no,height=310,width=220,top=200,left=200");
-
+window.open("Malek_z1.html","okienko");
 }
+
+function WinOpen_zad2()
+{
+window.open("Malek_z2.html","okienko");
+}
+
+function WinOpen_zad3()
+{
+window.open("tuba_z3.html","okienko");
+}
+
+
+
+
 </script>
 </head>
-
 <body>
-
   <font size="100">
   <center><B>Malek</b>
-    </font>
-<form>
-  <input type="button" name="przycisk" value="zadanie 1" onclick="WinOpen(' WinOpen_Malek')">
-  <input type="button" name="przycisk" value="kod do zadania 1" onclick="WinOpen(' WinOpen_Malek')"> 
-  <input type="button" name="przycisk" value="zadanie 2" onclick="WinOpen(' WinOpen_Malek')">
-  <input type="button" name="przycisk" value="kod do zadania 2" onclick="WinOpen(' WinOpen_Malek')">
- 
-  
-  </center>
-</form>
+
+<input type="button" name="przycisk" value="Zadanie 1" onclick="WinOpen_z1(' ')">
+<input type="button" name="przycisk" value="Zadanie 2" onclick="WinOpen_z2(' ')">
+<input type="button" name="przycisk" value="Zadanie 3" onclick="WinOpen_z3(' ')">
+
+
+<input type="button" name="przycisk" value="Zad 1 kod" onclick="WinOpen_z1_kod(' ')">
+<input type="button" name="przycisk" value="Zad 2 kod" onclick="WinOpen_z2_kod(' ')">
+
 </body>
 </html>
