--- a/index_Malek.html
+++ b/index_Malek.html
@@ -14,17 +14,17 @@
 <script language="JavaScript">
 function WinOpen_zad1()
 {
-window.open("Malek_z1.html","okienko");
+window.open("z1Malek.html","okienko");
 }
 
 function WinOpen_zad2()
 {
-window.open("Malek_z2.html","okienko");
+window.open("z1Malek.html","okienko");
 }
 
 function WinOpen_zad3()
 {
-window.open("tuba_z3.html","okienko");
+window.open("z3Malek.html","okienko");
 }
 
 
