--- a/index_Malek.html
+++ b/index_Malek.html
@@ -14,12 +14,12 @@
 <script language="JavaScript">
 function WinOpen_zad1()
 {
-window.open("z1Malek.html","okienko");
+window.open("Malekz1.html","okienko");
 }
 
 function WinOpen_zad2()
 {
-window.open("z1Malek.html","okienko");
+window.open("Malekz2.html","okienko");
 }
 
 function WinOpen_zad3()
