--- a/zadanie3_Malek.html
+++ b/zadanie3_Malek.html
@@ -30,7 +30,7 @@ Number --> Typ liczbowy
 String --> Typ tekstowy
 Boolea --> Typ logiczny
 Null --> Pusta zawartość
-Undefined --> Typ niezidentyfikowany
+Undefined --> Typ niezidenyfikowany
 Object --> Obiekt
 
 4) Przy nadawaniu nazw zmiennym należy przestrzegać pewnych zasad:
