--- a/z1Malek.html
+++ b/z1Malek.html
@@ -22,7 +22,7 @@
  Ze względów bezpieczeństwa JavaScript ma znacznie ograniczone uprawnienia dostępu do zasobów komputera, przy użyciu którego przeglądana jest dana strona, a wszelkie odwołania do funkcji i obiektów wykonywane są w trakcie wykonywania programu.<br>
  <h3>Czy jest to język obiektowy?</h3>
  JavaScript to obiektowy język skryptowy. Aplikacje napisane w języku obiektowym działają w maszynie wirtualnej lub w przeglądarce, a kod JavaScript jest uruchamiany wyłącznie w przeglądarkach. Dlatego nie jest on językiem obiektowym.<br><br>
- <textarea rows=1 cols=78>input type="button" name="przycisk" value="Nowa Strona" onclick="WinOpen(' ')"</textarea><br>
+ <textarea rows=1 cols=78>input type="buton" name="przycisk" value="Nowa Strona" onclick="WinOpen(' ')"</textarea><br>
  To polecenie tworzy przycisk, który po nacisnięciu otwiera nowe okno przeglądarki.<br><br>
  
  <textarea rows=1 cols=113>window.open("obraz.html","okienko","toolbar=no,directories=no,menubar=no,height=280,width=160,top=200,left=200");</textarea><br>
