--- a/index_Malek.html
+++ b/index_Malek.html
@@ -34,7 +34,15 @@ window.open("z3Malek.html","okienko");
 </head>
 <body>
   <font size="100">
-  <center><B>Malek</b>
+   .container {
+ width: 90%;
+height: auto;
+background-color: #FF9;
+margin-right: auto;
+margin-left: auto;
+color: #066;}
+ <div class="container">
+   <center><B>Malek</b>
 
 <input type="button" name="przycisk" value="Zadanie 1" onclick="WinOpen_z1(' ')">
 <input type="button" name="przycisk" value="Zadanie 2" onclick="WinOpen_z2(' ')">
@@ -43,6 +51,6 @@ window.open("z3Malek.html","okienko");
 
 <input type="button" name="przycisk" value="Zad 1 kod" onclick="WinOpen_z1_kod(' ')">
 <input type="button" name="przycisk" value="Zad 2 kod" onclick="WinOpen_z2_kod(' ')">
-
+<div>
 </body>
 </html>
